# home_recipes

./: .dockerignore  .env  .env.docker  .env.example  .env.prod  .gitignore  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  models.rs  recipe_exemple.json
backend/: .env  Cargo.toml  Command.md  TODO.md
backend/entity/: Cargo.toml
backend/entity/src/: favorites.rs  ingredient_group_translations.rs  ingredient_groups.rs  ingredient_translations.rs  ingredient_units.rs  ingredients.rs  languages.rs  lib.rs  notification_templates.rs  notifications.rs  password_reset_tokens.rs  prelude.rs  recipe_analytics.rs  recipe_comments.rs  recipe_ingredient_translations.rs  recipe_ingredients.rs  recipe_ratings.rs  recipe_tags.rs  recipe_translations.rs  recipe_versions.rs  recipes.rs  roles.rs  sessions.rs  step_group_translations.rs  step_groups.rs  step_translations.rs  steps.rs  tags.rs  users.rs
backend/error-logger-cli/: Cargo.toml  Command.md
backend/error-logger-cli/src/: main.rs  models.rs  parser.rs  printer.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20260211_005451_create_roles_table.rs  m20260211_010656_create_user_roles_table.rs  m20260211_011133_create_recipes_table.rs  m20260211_011348_create_ingredient_groups_table.rs  m20260211_011446_create_recipe_ingredients_table.rs  m20260211_011731_create_steps_table.rs  m20260211_012241_create_user_sessions_table.rs  m20260211_013915_create_favorites_table.rs  m20260211_013954_create_recipe_versions_table.rs  m20260211_014044_create_recipe_ratings_table.rs  m20260211_014627_add_two_factor_to_users_table.rs  m20260211_014659_add_two_factor_token_to_users_table.rs  m20260211_014728_add_two_factor_expire_at_to_users_table.rs  m20260211_014809_create_email_verification_tokens_table.rs  m20260211_014842_add_seeds.rs  m20260211_014927_create_languages_table.rs  m20260211_015007_create_recipe_translations_table.rs  m20260211_015044_move_steps_to_translations_table.rs  m20260212_014801_create_password_reset_tokens.rs  m20260217_014849_add_default_language_to_ingredients.rs  m20260218_030837_change_recipes_author_field_to_nullable.rs  m20260219_023250_add_automatic_update_at_to_all_Table_with_update_at.rs  m20260220_002434_create_ingredient_units_table.rs  m20260223_202845_move_to_new_ingredients_table.rs  m20260224_023906_add_more_unit.rs  m20260414_022539_create_notification_table.rs  m20260414_030931_add_default_notification_templates.rs  m20260415_003748_add_comment_reply_notification_template.rs
backend/migrations/: 20251119021643_create_games_table.up.sql  20251119021643_create_users_table.up.sql  20251120030930_create_roles_table.up.sql  20251120030938_create_user_roles_table.up.sql
backend/migrations/2025-11-25-004820-0000_create_users/: up.sql
backend/migrations/2025-11-25-004915-0000_create_roles/: up.sql
backend/migrations/2025-11-25-004942-0000_create_user_roles/: up.sql
backend/migrations/2025-12-14-203001-0000_recipes/: down.sql  up.sql
backend/migrations/2025-12-14-203235-0000_ingredients/: down.sql  up.sql
backend/migrations/2025-12-14-203344-0000_ingredient_groups/: down.sql  up.sql
backend/migrations/2025-12-14-203447-0000_recipe_ingredients/: down.sql  up.sql
backend/migrations/2025-12-14-203557-0000_tags/: down.sql  up.sql
backend/migrations/2025-12-15-015027-0000_step_groups/: down.sql  up.sql
backend/migrations/2025-12-15-203523-0000_steps/: down.sql  up.sql
backend/migrations/2026-01-08-205514-0000_user_sessions/: up.sql
backend/migrations/2026-01-15-015219-0000_create_favorites/: up.sql
backend/migrations/2026-01-15-015357-0000_create_recipe_versions/: down.sql  up.sql
backend/migrations/2026-01-15-015618-0000_create_recipe_ratings/: down.sql  up.sql
backend/migrations/2026-01-15-015724-0000_create_recipe_comments/: down.sql  up.sql
backend/migrations/2026-01-15-015948-0000_create_recipe_analytics/: down.sql  up.sql
backend/migrations/2026-01-16-030641-0000_add_two_factor/: down.sql  up.sql
backend/migrations/2026-01-17-025812-0000_add_two_factor_token/: down.sql  up.sql
backend/migrations/2026-01-17-030519-0000_add_two_factor_token_expires_at/: down.sql  up.sql
backend/migrations/2026-01-17-043658-0000_create_email_verifcation_tokens_table/: up.sql
backend/migrations/2026-01-21-033909-0000_add_seeds/: up.sql
backend/migrations/2026-02-04-195755-0000_create_language_table/: up.sql
backend/migrations/2026-02-04-200424-0000_create_recipe_translations/: down.sql  up.sql
backend/migrations/2026-02-04-201003-0000_move_steps_to_translations/: down.sql  up.sql
backend/migrations/2026-02-04-201943-0000_move_ingredients_to_translations/: down.sql  up.sql
backend/resources/: clean.py  dictionary.db  migrate_off.py  seed.sql  up.sql
backend/ressources/: clean.py  dictionnary.db  migrate_off.py  up.sql
backend/src/: config.rs  error.rs  errors.rs  lib.rs  main.rs  model.rs  models.rs  openapi.rs  prelude.rs  schema.rs
(+486 files in other folders)
