[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono", "serde_json","r2d2","numeric"] }
dotenvy = "0.15"

uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
blob-uuid = "0.5.0"
failure = "0.1.5"
futures = "0.3.31"
http = "1.4.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
libreauth = "0.18.1"
log = "0.4.28"
num_cpus = "1.17.0"
regex = "1.12.2"
serde_derive = "1.0.228"
slug = "0.1.6"
validator = "0.20.0"
validator_derive = "0.20.0"

regex-macro = "0.2"

argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
rand_core = "0.9.3"

actix-web = "4"
actix = "0.13.5"
actix-cors = "0.7.1"
actix-service = "2.0.3"
actix-http = "3.11.2"

# axum things
axum = "0.8.7"
env_logger = "0.11.8"
once_cell = "1.21.3"
bigdecimal = { version = "0.4.9", features = ["serde"] }

