[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono", "serde_json","r2d2","numeric"] }
dotenvy = "0.15"

uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
libreauth = "0.18.1"
log = "0.4.28"
num_cpus = "1.17.0"
serde_derive = "1.0.228"
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "1.0"


actix-web = "4"
actix = "0.13.5"
actix-cors = "0.7.1"

# axum things
env_logger = "0.11.8"
bigdecimal = { version = "0.4.9", features = ["serde"] }
actix-multipart = "0.7.2"
actix-files = "0.6.9"
time = "0.3.44"
futures-util = "0.3.31"
r2d2 = "0.8.10"
rand = "0.9.2"
qrcode = "0.14.1"
totp-lite = "2.0"
base32 = "0.4"
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }


# redis
redis = { version = "1.0.2", features = ["tokio-comp"] }


