[package]
name = "backend-sea-orm"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
libreauth = "0.18.1"
log = "0.4.28"
num_cpus = "1.17.0"
serde_derive = "1.0.228"
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "1.0"


# async runtime
tokio = { version = "^1.20", features = ["full"] }
sea-orm = { version = "2.0.0-rc.30", features = ["sqlx-postgres", "runtime-tokio", "macros","debug-print","mock","entity-registry","schema-sync"] }


actix-web = "4"
actix = "0.13.5"
actix-cors = "0.7.1"

# axum things
env_logger = "0.11.8"
bigdecimal = { version = "0.4.9", features = ["serde"] }
actix-multipart = { version = "0.7.2", features = ["tempfile"] }
actix-files = "0.6.9"
time = "0.3.44"
futures-util = "0.3.31"
r2d2 = "0.8.10"
rand = "0.9.2"
qrcode = "0.14.1"
totp-lite = "2.0"
base32 = "0.4"
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }
tesseract-rs = { version = "0.1.20", features = ["build-tesseract"] }
magick_rust = "2.0.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }

# redis
redis = { version = "1.0.2", features = ["tokio-comp"] }

regex = "1.12.3"

# Swagger / OpenAPI
utoipa = { version = "5.4.0", features = ["uuid","macros","chrono","decimal"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

migration = { path = "migration" }
entity = { path = "entity"}
error-logger-cli = { path = "error-logger-cli" }

reqwest = { version = "0.13.2", features = ["json"] }
image = { version = "0.25.5", features = ["jpeg", "png", "webp", "tiff"] }
imageproc = "0.25.0"
rust_decimal = "1.40.0"
base64 = "0.22.1"

sha2 = "0.10"
hex = "0.4"
csv = "1.3"

[workspace]
members = [
    ".",
    "migration",
    "entity",
    "error-logger-cli"
]
