[package]
name = "error-logger-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "error-logs"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
clap = { version = "4.4", features = ["derive", "cargo"] }
regex = "1.12"
colored = "2"
csv = "1.3"
anyhow = "1"
walkdir = "2"
tokio = { version = "1", features = ["time", "rt", "macros"] }